[tool.poetry]
name = "hats_cat"
version = "0.1.0"
description = ""
authors = ["Rich <r.hughes.reading@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
