[tool.poetry]
name = "hats_cat"
version = "0.1.0"
description = ""
authors = ["Rich <r.hughes.reading@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
numpy = "^1.22.3"
pandas = "^1.4.1"
tensorflow = "^2.8.0"
plotly = "^5.6.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.3.1"
seaborn = "^0.11.2"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
